@@ -7,6 +7,9 @@
   -improved Forest Temple:
     -split up the chests
     -tried to model the reqs including small keys
+  -improved Fire Temple:
+    -split up the chests
+    -tried to model the reqs including small keys
 1.0.0.4:
   -added small key counters
   -started adding open/closed forest/door logic
